--- a/templates/ticket_view.html
+++ b/templates/ticket_view.html
@@ -248,7 +248,7 @@ ${comment}</textarea></p>
                       ${option}
                     </label>
                     <input py:otherwise="" type="text" id="field-${field.name}"
-                      name="${field.name}" value="${ticket[field.name]}" />
+                      name="field_${field.name}" value="${ticket[field.name]}" />
                   </py:choose>
                 </td>
               </py:for>
