--- a/templates/attachment.html
+++ b/templates/attachment.html
@@ -78,7 +78,7 @@
             <tr>
               <th scope="col">
                 File $attachment.filename, ${sizeinfo(attachment.size)}
-                (added by $attachment.author,  ${dateinfo(attachment.date)} ago)
+                (added by ${authorinfo(attachment.author)},  ${dateinfo(attachment.date)} ago)
               </th>
             </tr>
             <tr>
