--- a/templates/attachment.html
+++ b/templates/attachment.html
@@ -43,7 +43,7 @@
           </fieldset>
           <div class="buttons">
             <input type="hidden" name="action" value="new" />
-            <input type="hidden" name="type" value="$context.parent.resource" />
+            <input type="hidden" name="type" value="$context.parent.realm" />
             <input type="hidden" name="id" value="$context.parent.id" />
             <input type="submit" value="Add attachment" />
             <input type="submit" name="cancel" value="Cancel" />
@@ -68,7 +68,7 @@
 
       <py:when test="'list'">
         <h1><a href="${context.parent.self_href()}">$parent.name</a></h1>
-        ${list_of_attachments(context.parent, attachments, href.attachment(context.parent.resource, context.parent.id))}
+        ${list_of_attachments(context.parent, attachments, href.attachment(context.parent.realm, context.parent.id))}
       </py:when>
 
       <py:otherwise> <!--! 'render' mode -->
