--- a/templates/changeset.html
+++ b/templates/changeset.html
@@ -50,8 +50,8 @@
         <h1 py:otherwise="">Changeset $new_rev</h1>
       </div>
 
-      <form py:if="has_diffs or diff.options.ignoreblanklines or diff.options.ignorecase or
-                     diff.options.ignorewhitespace"
+      <form py:if="not xhr and (has_diffs or diff.options.ignoreblanklines or diff.options.ignorecase or
+                                diff.options.ignorewhitespace)"
         id="prefs" action="">
         <div>
           <py:if test="not changeset">
