--- a/templates/ticket_new.html
+++ b/templates/ticket_new.html
@@ -9,7 +9,7 @@
     <title>New Ticket</title>
     <script type="text/javascript" src="${chrome.htdocs_location}js/wikitoolbar.js"></script>
     <script type="text/javascript">
-      $(document).ready(function() {$("#summary").get(0).focus()});
+      $(document).ready(function() {$("#field-summary").get(0).focus()});
     </script>
   </head>
 
